--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:1337
+NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:1337/graphql
+NEXT_PUBLIC_ASSET_ENDPOINT=http://localhost:1337
