--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://aniquiz-api.jmp.blue
+NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://aniquiz-api.jmp.blue/graphql
+NEXT_PUBLIC_ASSET_ENDPOINT=https://aniquiz-api.jmp.blue
