--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,63 @@
 {
-  "extends": "next/core-web-vitals",
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "next/core-web-vitals"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 13,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
   "rules": {
-    "semi": ["error", "never"],
-    "quotes": ["error", "single"],
+    "semi": [
+      "error",
+      "never"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
     "prefer-template": "error",
     "space-infix-ops": "error",
-    "jsx-quotes": ["error", "prefer-double"],
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
     "standard/no-callback-literal": "off",
     "no-void": "off",
     "no-new": "off",
     "comma-dangle": "off",
     "array-callback-return": "off",
     "@typescript-eslint/space-infix-ops": "error",
-    "@typescript-eslint/comma-dangle": ["error", "always-multiline"],
-    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
-    "@typescript-eslint/consistent-type-imports": ["error", {"prefer": "type-imports"}],
+    "@typescript-eslint/comma-dangle": [
+      "error",
+      "always-multiline"
+    ],
+    "@typescript-eslint/consistent-type-definitions": [
+      "error",
+      "interface"
+    ],
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      {
+        "prefer": "type-imports"
+      }
+    ],
     "@typescript-eslint/no-inferrable-types": "error",
     "@typescript-eslint/no-empty-interface": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
@@ -39,23 +82,95 @@
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "react/jsx-indent": ["error", 2, { "checkAttributes": true, "indentLogicalExpressions": true }],
-    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
-    "react/self-closing-comp": ["error", { "component": true, "html": true }],
-    "react/jsx-closing-bracket-location": [1, "line-aligned"],
+    "react/jsx-indent": [
+      "error",
+      2,
+      {
+        "checkAttributes": true,
+        "indentLogicalExpressions": true
+      }
+    ],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function"
+      }
+    ],
+    "react/self-closing-comp": [
+      "error",
+      {
+        "component": true,
+        "html": true
+      }
+    ],
+    "react/jsx-closing-bracket-location": [
+      1,
+      "line-aligned"
+    ],
     "react/jsx-closing-tag-location": "error",
-    "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never" }],
-    "react/jsx-curly-newline": ["error", { "multiline": "consistent", "singleline": "forbid" }],
-    "react/jsx-curly-spacing": ["error", {"when": "never", "children": true, "allowMultiline": true}],
-    "react/jsx-equals-spacing": ["error", "never"],
-    "react/jsx-fragments": ["error", "syntax"],
-    "react/jsx-indent-props": ["error", 2],
-    "react/jsx-max-props-per-line": ["error", { "when": "multiline" }],
-    "react/jsx-newline": ["error", { "prevent": true }],
+    "react/jsx-curly-brace-presence": [
+      "error",
+      {
+        "props": "never",
+        "children": "never"
+      }
+    ],
+    "react/jsx-curly-newline": [
+      "error",
+      {
+        "multiline": "consistent",
+        "singleline": "forbid"
+      }
+    ],
+    "react/jsx-curly-spacing": [
+      "error",
+      {
+        "when": "never",
+        "children": true,
+        "allowMultiline": true
+      }
+    ],
+    "react/jsx-equals-spacing": [
+      "error",
+      "never"
+    ],
+    "react/jsx-fragments": [
+      "error",
+      "syntax"
+    ],
+    "react/jsx-indent-props": [
+      "error",
+      2
+    ],
+    "react/jsx-max-props-per-line": [
+      "error",
+      {
+        "when": "multiline"
+      }
+    ],
+    "react/jsx-newline": [
+      "error",
+      {
+        "prevent": true
+      }
+    ],
     "react/jsx-props-no-multi-spaces": "error",
-    "react/jsx-space-before-closing": ["error", "never"],
-    "react/jsx-tag-spacing": ["error", { "closingSlash": "never", "beforeSelfClosing": "never", "afterOpening": "never", "beforeClosing": "allow" }],
-    "react/jsx-wrap-multilines": ["error", {
+    "react/jsx-space-before-closing": [
+      "error",
+      "never"
+    ],
+    "react/jsx-tag-spacing": [
+      "error",
+      {
+        "closingSlash": "never",
+        "beforeSelfClosing": "never",
+        "afterOpening": "never",
+        "beforeClosing": "allow"
+      }
+    ],
+    "react/jsx-wrap-multilines": [
+      "error",
+      {
         "declaration": "parens-new-line",
         "assignment": "parens-new-line",
         "return": "parens-new-line",
@@ -63,8 +178,12 @@
         "condition": "parens-new-line",
         "logical": "parens-new-line",
         "prop": "parens-new-line"
-    }],
-    "react/jsx-first-prop-new-line": ["error", "multiline-multiprop"],
+      }
+    ],
+    "react/jsx-first-prop-new-line": [
+      "error",
+      "multiline-multiprop"
+    ],
     "react/jsx-no-useless-fragment": "error",
     "react/display-name": "off",
     "react/prop-types": "off"
